--- a/html-report-template.html
+++ b/html-report-template.html
@@ -8,28 +8,282 @@
   jQuery(document).ready(function () {
     // Put javascript to be executed after page is loaded here
 
-    var orgUnit = dhis2.report.organisationUnit; // An object
+    /* Start boilerplate */
+    // This is not working b/c orgunit/period error in forms
+    // const orgUnit = dhis2.report.organisationUnit; // An object
+    // const id = orgUnit.id;
+    // const name = orgUnit.name;
+    // const code = orgUnit.code;
 
-    var id = orgUnit.id;
-    var name = orgUnit.name;
-    var code = orgUnit.code;
+    // const orgUnitHierarchy = dhis2.report.organisationUnitHierarchy; // An array with org unit objects for the hierarchy (current org unit first)
+    // const name = orgUnitHierarchy[0].name;
 
-    var orgUnitHierarchy = dhis2.report.organisationUnitHierarchy; // An array with org unit objects for the hierarchy (current org unit first)
+    // const orgUnitChildren = dhis2.report.organisationUnitChildren; // An array with child org unit objects
 
-    var name = orgUnitHierarchy[0].name;
+    // const date = dhis2.report.date; // A date in yyyy-MM-dd format
 
-    var orgUnitChildren = dhis2.report.organisationUnitChildren; // An array with child org unit objects
+    // const periods = dhis2.report.periods; // An array with period identifiers
+    // const period = periods[0];
+    /** End boilerplate */
 
-    var date = dhis2.report.date; // A date in yyyy-MM-dd format
+    // Defining these values here because form creation error isn't saving report parameter settings
+    const period = "THIS_MONTH";
+    const orgUnit = "GdH306UQ8L8"; // This is the global org-unit
 
-    var periods = dhis2.report.periods; // An array with period identifiers
+    // Test out fetching programIndicator list
+    $.get(
+      "../api/programIndicators.json?filter=displayName:like:MDA&paging=false",
+      (json) => {
+        const { programIndicators } = json;
+        console.log(programIndicators);
 
-    var period = periods[0];
+        const eiuIndic = programIndicators.find(
+          (pi) => pi.displayName === "LFMDA - Endemic and On MDA IUs"
+        );
+        console.log(eiuIndic);
+        console.log(programIndicators);
+
+        // TODO: Get all the data from the dimensions!
+
+        /* Setting up a table */
+        // Some enums I might use
+        const columnSubcategories = Object.freeze({
+          ROUND_1: "Round 1",
+          ROUND_2: "Round 2",
+          TOTAL: "Total",
+        });
+        const rowTypes = Object.freeze({
+          CATEGORY: "category",
+          PROGRAM_INDICATOR: "programIndicator",
+          INDICATOR: "indicator",
+        });
+        // Enum for program indicator names?
+
+        // Column and row values
+        // TODO: Add short names
+        const columns = [
+          { name: "Trachoma MDA", prefix: "TCMDA", subcategories: null },
+          {
+            name: "Lymphatic Filariasis MDA",
+            prefix: "LFMDA",
+            subcategories: null,
+          },
+          {
+            name: "Onchopsoriasis MDA",
+            prefix: "OMDA",
+            subcategories: [
+              columnSubcategories.ROUND_1,
+              columnSubcategories.ROUND_2,
+              columnSubcategories.TOTAL,
+            ],
+          }, // Maybe use `.subcategories: [...]`
+          {
+            name: "Schistosomiasis MDA",
+            prefix: "SCMDA",
+            subcategories: [
+              columnSubcategories.ROUND_1,
+              columnSubcategories.ROUND_2,
+              columnSubcategories.TOTAL,
+            ],
+          },
+          {
+            name: "Soil-transmitted Helminth MDA",
+            prefix: "STMDA",
+            subcategories: [
+              columnSubcategories.ROUND_1,
+              columnSubcategories.ROUND_2,
+              columnSubcategories.TOTAL,
+            ],
+          },
+        ];
+
+        const rows = [
+          // Endemicity
+          { name: "Endemicity", type: rowTypes.CATEGORY },
+          { name: "Endemic IUs", type: rowTypes.PROGRAM_INDICATOR },
+          {
+            name: "IUs which reached the criteria to stop MDA",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          {
+            name: "IUs in post-treatment surveillance",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          {
+            name: "IUs eligible for post MDA surveillance phase",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          {
+            name: "IUs where NTD endemicity is unknown",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          {
+            name: "Population in NTD affected IUs",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          {
+            name: "IUs eligible for pre-TAS surveys",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          {
+            name: "IUs eligible for TAS/IA surveys",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          // Targets
+          { name: "Targets", type: rowTypes.CATEGORY },
+          { name: "Total Population of IUs", type: rowTypes.PROGRAM_INDICATOR },
+          {
+            name: "Population eligible for MDA treatment",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          {
+            name: "Estimated size of populations with high risk of infection",
+            type: rowTypes.PROGRAM_INDICATOR,
+          },
+          // ... more to come
+        ];
+
+        // Set up column headers and subheaders
+        $("#header-row-top").append(`<th scope="col">Category</th>`);
+        $("#header-row-bottom").append(`<th scope="col"></th>`);
+        columns.forEach((col) => {
+          if (col.subcategories) {
+            // 1. Make the top row th colspan = col.subcategories.length
+            $("#header-row-top").append(
+              `<th scope="col" colspan="${col.subcategories.length}">${col.name}</th>`
+            );
+            // 2. Make a bottom row th for each subcategory
+            col.subcategories.forEach((sc) => {
+              $("#header-row-bottom").append(`<th scope="col">${sc}</th>`);
+            });
+            return;
+          }
+          // Else, th with col name on top header row, empty cell on bottom
+          $("#header-row-top").append(`<th scope=col>${col.name}</th>`);
+          $("#header-row-bottom").append(`<th scope="col"></th>`);
+        });
+
+        const totalColumns =
+          1 +
+          columns.reduce((sum, column) => {
+            return (
+              sum + (column.subcategories ? column.subcategories.length : 1)
+            );
+          }, 0);
+
+        // console.log(programIndicators); // good here
+        // console.log(programIndicators.find); // good here
+
+        // Populate table body
+        const tbody = $("#tbody");
+        rows.forEach((row) => {
+          // console.log(programIndicators); // good here
+          // console.log(programIndicators.find); // good here
+
+          // Make new row object
+          const newRow = $(`<tr id=${row.name}></tr>`);
+          // Add new row to DOM
+          tbody.append(newRow);
+
+          if (row.type === rowTypes.CATEGORY) {
+            // If row is just a category, make one wide cell and return
+            newRow.append(
+              `<th scope="row" colspan="${totalColumns}">${row.name}</th>`
+            );
+            return;
+          }
+
+          // Add row header with name
+          newRow.append(`<th scope="row">${row.name}</th>`);
+          // Add data cells
+          columns.forEach((col) => {
+            // 1. Check if column has subcategories
+            if (col.subcategories) {
+              // A&B: Search for data w/ subcategory suffix. If found, make new cell and return; If not, continue -
+              // C: If subcategory is `Total`, look for data without suffix. If found, make new cell and return, if not, make empty cell
+
+              col.subcategories.forEach((sc) => {
+                const dimensionName = `${col.prefix} - ${row.name}`; // e.g. "TMDA - Endemic IUs"
+
+                // TODO: Use indicators / programIndicators / other
+                const pi = programIndicators.find(
+                  (pi) => pi.displayName === dimensionName
+                );
+                const dimensionId = pi ? pi.id : "dimension not found";
+                // 3. Add data (or empty) to cell
+                // TODO: Turn this into one query for the whole table
+                newRow.append(`<td>${dimensionId}</td>`);
+              });
+              return;
+            }
+
+            // 2. If no subcategories, look for data for cell (use row name & col prefix)
+            const dimensionName = `${col.prefix} - ${row.name}`; // e.g. "TMDA - Endemic IUs"
+
+            // TODO: Use indicators / programIndicators / other
+            const pi = programIndicators.find(
+              (pi) => pi.displayName === dimensionName
+            );
+            const dimensionId = pi ? pi.id : "dimension not found";
+            // 3. Add data (or empty) to cell
+            // TODO: Turn this into one query for the whole table
+            newRow.append(`<td>${dimensionId}</td>`);
+
+            // Maybe, if data is not found, check /api/programIndicators with case insensitivity to see if field exists
+          });
+        });
+      }
+    );
+
+    // /* populating the test table */
+    // const testColumns = ["col1", "col2", "col3", "col4"];
+    // const testRows = ["row1", "row2", "row3", "row4"];
+
+    // // Set up column headers
+    // $("#header-row").append(`<th scope="col">Row</th>`);
+    // testColumns.forEach((col) => {
+    //   $("#header-row").append(`<th scope=col>${col}</th>`);
+    // });
+
+    // // Populate table body
+    // const tbody = $("#tbody");
+    // testRows.forEach((row) => {
+    //   const newRow = $(`<tr id=${row}></tr>`);
+    //   tbody.append(newRow);
+    //   newRow.append(`<th scope="row">${row}</th>`);
+    //   testColumns.forEach((col) => {
+    //     newRow.append(`<td>${row} ${col}</td>`);
+    //   });
+    // });
   });
 </script>
 
+<!-- Bootstrap test -->
+<link
+  rel="stylesheet"
+  href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+  integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
+  crossorigin="anonymous"
+/>
+
 <div>
   <!-- Put your HTML mark-up here -->
+
+  <h1>Table test</h1>
+
+  <table id="table1" class="table">
+    <thead id="thead">
+      <tr id="header-row-top">
+        <!-- Script will populate col headers here -->
+      </tr>
+      <tr id="header-row-bottom">
+        <!-- Script will populate col subheaders here-->
+      </tr>
+    </thead>
+    <tbody id="tbody">
+      <!-- Script will populate rows here -->
+    </tbody>
+  </table>
 
   <!-- Remove all content after this line after reading it -->
 
