--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
           }
         );
 
+
+        /* Populate the table */
         const columns = ["col1", "col2", "col3", "col4"];
         const rows = ["row1", "row2", "row3", "row4"];
 
