Style row headers

--- a/html-report-template.html
+++ b/html-report-template.html
@@ -1,5 +1,10 @@
 <style type="text/css" media="screen">
   /* Put your CSS styling here */
+
+  /* Rows that are not category labels */
+  th[scope="row"]:not([colspan]) {
+    font-weight: normal;
+  }
 </style>
 
 <script type="text/javascript">
